tests/transpiler/x/go/nested_function.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-20 13:41:16 GMT+7
package main

import (
	"fmt"
)

func outer(x int) int {
	inner := func(y int) int {
		return (x + y)
	}
	return inner(5)
}

func main() {
	fmt.Println(outer(3))
}
